<resources>
    <string name="app_name">Registration App</string>
    <string name="greetings">Registration Form</string>
    <string name="sub">Welcome to Adventure Learning Club</string>
    <string name="fname">First Name:</string>
    <string name="lname">Last Name:</string>
    <string name="gender">Gender:</string>
    <string name="m">Male</string>
    <string name="f">Female</string>
    <string name="id">Student ID:</string>
    <string name="sch">School:</string>
    <string name="mail">E-mail:</string>
    <string name="phone">Phone Number:</string>
    <string name="reg">Register</string>
</resources>